--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -67,6 +67,7 @@
     }
     
     .holder {
+        margin-top: 20px;
         text-align: center;
         /*    border: 1px solid #8d7254;*/
         /*    background: #9f805e;*/
