enabled the twitter comparison through the python app save all lyrics into a file to study offline

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -642,6 +642,7 @@
         flex-direction: column;
         justify-content: center;
         align-content: center;
+      margin: 20px;
     }
     
     .feedback {
